@@ -43,5 +43,5 @@ rm -rf %{buildroot}
 %attr(644,root,root) /usr/share/man/man[58]/*
 
 %changelog
-* Wed Aug 2 2006 Brendan O'Dea <bod@optus.net> 2.1.20-1
+* Thu Aug 3 2006 Brendan O'Dea <bod@optus.net> 2.1.20-1
 - 2.1.20 release, see /usr/share/doc/l2tpns-2.1.20/Changes
